# todo-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: fly.yml
src/: lib.rs  main.rs  model.rs  server.rs
src/routes/: healthcheck.rs  index.rs  mod.rs  todos.rs  user.rs
src/routes/healthcheck/: get.rs  mod.rs
src/routes/todo/: delete.rs  error.rs  get.rs  mod.rs  post.rs  utils.rs
src/routes/user/: error.rs  mod.rs  post.rs  utils.rs
