[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
argon2 = "0.5.2"
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0", features = ["serde_derive"] }
futures = "0.3.29"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
time = "0.3.30"
env_logger = "0.10.1"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
